--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="AddItem.html">Add Item</a></li>
-								<li><a href="AddCategory.html">Add Category</a></li>
+								<li><a href="{{ url_for('create_item') }}">Add Item</a></li>
+								<li><a href="{{ url_for('create_category') }}">Add Category</a></li>
 							</ul>
 						</nav>
 
