--- a/templates/AddCategory.html
+++ b/templates/AddCategory.html
@@ -23,9 +23,9 @@
 					<!-- Nav -->
           <nav id="nav">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="AddItem.html">Add Item</a></li>
-				<li><a href="AddCategory.html">Add Category</a></li>
+				<li><a href="{{ url_for('home_page') }}">Home</a></li>
+				<li><a href="{{ url_for('create_new_item') }}">Add Item</a></li>
+				<li><a href="{{ url_for('create_new_category') }}">Add Category</a></li>
 			  </ul>
           </nav>
 
@@ -34,22 +34,22 @@
 
 			<!-- Main -->
 			<form>
-  
+
 				<div class="segment">
 				  <h1>Add Category</h1>
 				</div>
-				
+
 				<select name = "AddArea">
 				   <option value = "Living Room" selected>Living Room</option>
 				   <option value = "Dining Room" selected>Dining Room</option>
 				   <option value = "Study Room" selected>Study Room</option>
 				</select>
 				<label><input type="text" name="location" placeholder="Add Location"/> </label>
-		  
+
 				<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
-				
-				
-				
+
+
+
 			  </form>
 
 		<!-- Scripts -->
