--- a/templates/AddItem.html
+++ b/templates/AddItem.html
@@ -23,9 +23,9 @@
 					<!-- Nav -->
           <nav id="nav">
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="AddItem.html">Add Item</a></li>
-              <li><a href="AddCategory.html">Add Category</a></li>
+              <li><a href="{{ url_for('home_page') }}">Home</a></li>
+              <li><a href="{{ url_for('create_new_item') }}">Add Item</a></li>
+              <li><a href="{{ url_for('create_new_category') }}">Add Category</a></li>
             </ul>
           </nav>
 
@@ -34,9 +34,9 @@
 				</div>
 
 			<!-- Main -->
-				
+
 			<form>
-			
+
 				<label> <input type="text" name="item_name" placeholder="Item Name"/> </label>
 				<label> <input type="file" id="img" name="img" accept="image/*"> </label>
 				<select name = "Select Category">
@@ -49,7 +49,7 @@
 					<label> <input type="date" name="purchase_date" value="Purchase Date" min="1990-01-01" max="2022-04-22"> </label>
 					<label> <input type="text" name="tags" placeholder="#Tags (comma separated)"/> </label>
 					<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
-				
+
 			  </form>
 
 		<!-- Scripts -->
