--- a/templates/Sign-In.html
+++ b/templates/Sign-In.html
@@ -16,7 +16,7 @@
 			<form>
 				<label> <input type="text" placeholder="User Name"/> </label>
 				<label> <input type="password" placeholder="Password"/> </label>
-				<button class="red" type="button"><a href="index.html"><i class="icon ion-md-lock"></i>Sign In</a></button>
+				<button class="red" type="button"><a href="{{ url_for('home_page') }}"><i class="icon ion-md-lock"></i>Sign In</a></button>
 				<div class="copyright">
 					<ul class="menu" style="margin: 5%;">
 						<li><a href="Forgot-Password.html">Reset Password</a></li><li><a href="Sign-up.html">Sign-Up</a></li>
@@ -26,7 +26,7 @@
 			</form>
 
 			<!-- Footer -->
-			
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
