Fixing more linking issues

--- a/templates/Sign-In.html
+++ b/templates/Sign-In.html
@@ -19,7 +19,7 @@
 				<button class="red" type="button"><a href="{{ url_for('home_page') }}"><i class="icon ion-md-lock"></i>Sign In</a></button>
 				<div class="copyright">
 					<ul class="menu" style="margin: 5%;">
-						<li><a href="Forgot-Password.html">Reset Password</a></li><li><a href="Sign-up.html">Sign-Up</a></li>
+						<li><a href="Forgot-Password.html">Reset Password</a></li><li><a href="{{ url_for('welcome') }}">Sign-Up</a></li>
 					</ul>
 				</div>
 
