--- a/templates/AddCategory.html
+++ b/templates/AddCategory.html
@@ -16,7 +16,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Add Category</a></h1>
+								<h1><a id="logo">Add Category</a></h1>
 							</header>
 						</div>
 
