--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -4,8 +4,8 @@
 		<title>Add Item</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="static/css/main.css" />
+		<noscript><link rel="stylesheet" href="static/css/noscript.css" /></noscript>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -44,7 +44,7 @@
 							<h3>Tags</h3> <p>#Dolor #sed #fringilla #nibh #nulla</p>
 							<p>Description Here....</p>
 						</section>
-						<hr />	
+						<hr />
 						<style>
 							.dropdown-content {
 							  display: none; position: absolute; background-color: #f1f1f1;  min-width: 350px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1;
@@ -64,9 +64,9 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<hr />
-				
+
 				<h3 style="margin-bottom: 30px;">Related Items You Own</h3>
 				<div class="row">
 					<article class="col-4 col-12-mobile special">
@@ -103,19 +103,19 @@
 			</div>
 
 		</div>
-				
-			
+
+
 
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="static/js/jquery.min.js"></script>
+			<script src="static/js/jquery.dropotron.min.js"></script>
+			<script src="static/js/jquery.scrolly.min.js"></script>
+			<script src="static/js/jquery.scrollex.min.js"></script>
+			<script src="static/js/browser.min.js"></script>
+			<script src="static/js/breakpoints.min.js"></script>
+			<script src="static/js/util.js"></script>
+			<script src="static/js/main.js"></script>
 
 	</body>
 </html>
