--- a/templates/All_Items.html
+++ b/templates/All_Items.html
@@ -4,8 +4,8 @@
 		<title>All Items</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="static/styles/main.styles" />
-		<noscript><link rel="stylesheet" href="static/styles/noscript.styles" /></noscript>
+		<link rel="stylesheet" href="static/styles/main.css" />
+		<noscript><link rel="stylesheet" href="static/styles/noscript.css" /></noscript>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
