Fixing html refs

--- a/templates/AddCategory.html
+++ b/templates/AddCategory.html
@@ -26,7 +26,7 @@
 				<li><a href="{{ url_for('home_page') }}">Home</a></li>
 				<li><a href="{{ url_for('create_new_item') }}">Add Item</a></li>
 				<li><a href="{{ url_for('create_new_category') }}">Add Category</a></li>
-				<li><a href="All_Items.html">All Items</a></li>
+				<li><a href="{{ url_for('all_items') }}">All Items</a></li>
 			  </ul>
           </nav>
 
