--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -14,10 +14,10 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="AddItem.html">Add Item</a></li>
-						<li><a href="AddCategory.html">Add Category</a></li>
-						<li><a href="All_Items.html">All Items</a></li>
+						<li><a href="{{ url_for('home_page') }}">Home</a></li>
+						<li><a href="{{ url_for('create_new_item') }}">Add Item</a></li>
+						<li><a href="{{ url_for('create_new_category') }}">Add Category</a></li>
+						<li><a href="{{ url_for('all_items') }}">All Items</a></li>
 					</ul>
 				</nav>
 			</div>
