Wrking on redirect

--- a/templates/AddItem.html
+++ b/templates/AddItem.html
@@ -46,7 +46,7 @@
 					<option value = "{{cat["categoryName"]}}">{{cat["categoryName"]}}</option>
 					{% endfor %}
 				  </select>
-				  <label> <input type="text" name="location" placeholder="Item Location">
+				  <label> <input type="text" name="location" placeholder="Item Location"> </label>
 					<label> <input type="date" name="purchase_date" value="Purchase Date" min="1990-01-01" max="2022-04-22"> </label>
 					<label> <input type="text" name="tags" placeholder="#Tags (comma separated)"/> </label>
 					<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
