--- a/templates/All_Items.html
+++ b/templates/All_Items.html
@@ -33,79 +33,19 @@
 
 		<!-- Carousel -->
         <div class="row m1">
+					{% for item in items %}
             <article class="col-4 col-12-mobile special">
                 <a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
                 <header>
-                    <h3><a href="#">Item Name</a></h3>
+                    <h3><a href="#">{{item["itemName"]}}</a></h3>
                 </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
+                <p>{{item["category"]}}</p>
+								<p>{{item["location"]}}</p>
+								<p>{{item["purchase_date"]}}</p>
+								<p>{{item["tags"]}}</p>
             </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-
+						{% endfor %}
         </div>
-
 
 		<!-- Scripts -->
 			<script src="static/js/jquery.min.js"></script>
