--- a/templates/All_Items.html
+++ b/templates/All_Items.html
@@ -42,7 +42,7 @@
                 <p>Category:     {{item["category"]}}</p>
 								<p>Location:     {{item["location"]}}</p>
 								<p>Puchase Date: {{item["purchase_date"]}}</p>
-								<p>Tags: {{ ", " if not item["tags"].last else ""}}</p>
+								<p>Tags: 				 {{item["tags"]|join(", ")}}</p>
             </article>
 						{% endfor %}
         </div>
