--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -56,7 +56,7 @@
 							<button class="red" type="button">Perform Actions</button>
 							<div class="dropdown-content">
 								<a href="#">Update Item</a>
-								<a href="{{ url_for('delete_item')}}">Remove Item</a>
+								<a href="{{ url_for('delete_item', item=item["itemName"])}}">Remove Item</a>
 							</div>
 						</div>
 					</div>
