--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -40,7 +40,7 @@
 					<div class="col-4 col-12-mobile" id="sidebar">
 						<hr class="first" />
 						<section>
-							<h3>Tags</h3> <p>{{item["tags"]|join("#, ")}}</p>
+							<h3>Tags</h3> <p>{{item["tags"]|join(", ")}}</p>
 							<p>Puchase Date: {{item["purchase_date"]}}</p>
 						</section>
 						<hr />
