--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 								<li><a href="{{ url_for('create_new_item') }}">Add Item</a></li>
 								<li><a href="{{ url_for('create_new_category') }}">Add Category</a></li>
 								<li><a href="{{ url_for('all_items') }}">All Items</a></li>
-								<li><a href="{{ url_for('signout') }}">Sign Out</a></li>
+								<li><a href="{{ url_for('signout') }}">Sign Out[{{username}}]</a></li>
 							</ul>
 						</nav>
 
