--- a/templates/index.html
+++ b/templates/index.html
@@ -39,67 +39,15 @@
 				<section class="carousel">
 					<div class="reel">
 
+						{% for item in items %}
 						<article>
 							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Item Name</a></h3>
+								<h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName"]}}</a></h3>
 							</header>
 						</article>
+						{% endfor %}
 
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
-
-						<article>
-							<a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Item Name</a></h3>
-							</header>
-						</article>
 					</div>
 				</section>
 					</div>
