--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -55,7 +55,7 @@
 						<div class="dropdown">
 							<button class="red" type="button">Perform Actions</button>
 							<div class="dropdown-content">
-								<a href="#">Update Item</a>
+								<a href="{{ url_for('update_item', item_name=item["itemName"])}}">Update Item</a>
 								<a href="{{ url_for('delete_item', item_name=item["itemName"])}}">Remove Item</a>
 							</div>
 						</div>
