--- a/templates/UpdateItem.html
+++ b/templates/UpdateItem.html
@@ -4,8 +4,8 @@
 		<title>Update Item</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="static/styles/main.css" />
-		<noscript><link rel="stylesheet" href="static/styles/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../static/styles/main.css" />
+		<noscript><link rel="stylesheet" href="../static/styles/noscript.css" /></noscript>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -49,19 +49,19 @@
 				  <label> <input type="text" name="location" value="{{item["location"]}}"> </label>
 					<label> <input type="date" name="purchase_date" value="{{item["purchase_date"]}}" min="1990-01-01" max="2022-04-22"> </label>
 					<label> <input type="text" name="tags" value="{{item["tags"]|join(", ")}}"/> </label>
-					<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
+					<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Update</button>
 
 			  </form>
 
 		<!-- Scripts -->
-			<script src="static/js/jquery.min.js"></script>
-			<script src="static/js/jquery.dropotron.min.js"></script>
-			<script src="static/js/jquery.scrolly.min.js"></script>
-			<script src="static/js/jquery.scrollex.min.js"></script>
-			<script src="static/js/browser.min.js"></script>
-			<script src="static/js/breakpoints.min.js"></script>
-			<script src="static/js/util.js"></script>
-			<script src="static/js/main.js"></script>
+			<script src="../static/js/jquery.min.js"></script>
+			<script src="../static/js/jquery.dropotron.min.js"></script>
+			<script src="../static/js/jquery.scrolly.min.js"></script>
+			<script src="../static/js/jquery.scrollex.min.js"></script>
+			<script src="../static/js/browser.min.js"></script>
+			<script src="../static/js/breakpoints.min.js"></script>
+			<script src="../static/js/util.js"></script>
+			<script src="../static/js/main.js"></script>
 
 	</body>
 </html>
