Adding Vandans search update

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,13 @@
 
 		</div>
 
+		<div id="mybutton">
+			<div class="search">
+				<input type="text" class="searchTerm" placeholder="What are you looking for?">
+				<button type="submit" class=" searchButtonfeedback"><i class="fa fa-search"></i></button>
+			</div>
+		</div>
+
 		<!-- Scripts -->
 		<script src="../static/js/jquery.min.js"></script>
 		<script src="../static/js/jquery.dropotron.min.js"></script>
