--- a/templates/search.html
+++ b/templates/search.html
@@ -32,59 +32,18 @@
 		<!-- Main -->
 
 		<!-- Carousel -->
-        <div class="row m1">
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-            <article class="col-4 col-12-mobile special">
-                <a href="Single_Item.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                <header>
-                    <h3><a href="#">Item Name</a></h3>
-                </header>
-                <p>
-                    Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-                    porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-                </p>
-            </article>
-
-        </div>
+				<div class="row m1">
+					{% for item in items %}
+						<article class="col-4 col-12-mobile special">
+								<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<header>
+										<h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName"]}}</a></h3>
+								</header>
+								<p>Category:     {{item["category"]}}</p>
+								<p>Location:     {{item["location"]}}</p>
+						</article>
+						{% endfor %}
+				</div>
 
 
 		<!-- Scripts -->
