--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,8 @@
 
 		<div id="mybutton">
 			<div class="search">
-				<input type="text" class="searchTerm" placeholder="What are you looking for?">
-				<button type="submit" class=" searchButtonfeedback"><i class="fa fa-search"></i></button>
+				<input type="text" class="searchTerm" name="search_word" placeholder="What are you looking for?">
+				<button type="submit" class=" searchButtonfeedback" formmethod="post"><i class="fa fa-search"></i></button>
 			</div>
 		</div>
 
