Fixing serahc html to be a form

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,17 +50,19 @@
 
 					</div>
 				</section>
-					</div>
-				</div>
 
+<form>
+				<div id="mybutton">
+					<div class="search">
+						<input type="text" class="searchTerm" name="search_word" placeholder="What are you looking for?">
+					<!--	<button type="submit" class=" searchButtonfeedback" formmethod="post"><i class="fa fa-search"></i></button>-->
+						<button class="red" type="submit" name="search_button" formmethod="post"><i class="fa fa-search"></i></button>
+					</div>
+			</div>
+		</form>
+			</div>
 		</div>
 
-		<div id="mybutton">
-			<div class="search">
-				<input type="text" class="searchTerm" name="search_word" placeholder="What are you looking for?">
-	<!--			<button type="submit" class=" searchButtonfeedback" formmethod="post"><i class="fa fa-search"></i></button>-->
-				<button class="red" type="submit" name="search_button" formmethod="post"><i class="fa fa-search"></i></button>
-			</div>
 		</div>
 
 		<!-- Scripts -->
