Backend search updates

--- a/templates/All_Items.html
+++ b/templates/All_Items.html
@@ -14,7 +14,7 @@
                 <!-- Inner -->
                 <div class="inner">
                     <header>
-                        <h1><a href="index.html" id="logo">All Items Under My Roof...</a></h1>
+                        <h1><a id="logo">All Items Under My Roof...</a></h1>
                     </header>
                 </div>
                 <!-- Nav -->
