--- a/templates/index.html
+++ b/templates/index.html
@@ -51,15 +51,16 @@
 					</div>
 				</section>
 
-<form>
-				<div id="mybutton">
-					<div class="search">
-						<input type="text" class="searchTerm" name="search_word" placeholder="What are you looking for?">
-					<!--	<button type="submit" class=" searchButtonfeedback" formmethod="post"><i class="fa fa-search"></i></button>-->
-						<button class="red" type="submit" name="search_button" formmethod="post"><i class="fa fa-search"></i></button>
+				<!-- Form for search option -->
+				<form>
+					<div id="mybutton">
+						<div class="search">
+							<input type="text" class="searchTerm" name="search_word" placeholder="What are you looking for?">
+							<button class="red" type="submit" name="search_button" formmethod="post"><i class="fa fa-search"></i></button>
+						</div>
 					</div>
-			</div>
-		</form>
+				</form>
+
 			</div>
 		</div>
 
