--- a/templates/search.html
+++ b/templates/search.html
@@ -14,7 +14,7 @@
                 <!-- Inner -->
                 <div class="inner">
                     <header>
-                        <h1><a href="index.html" id="logo">Search Result</a></h1>
+                        <h1><a id="logo">Search Result</a></h1>
                     </header>
                 </div>
                 <!-- Nav -->
