--- a/templates/All_Items.html
+++ b/templates/All_Items.html
@@ -37,7 +37,7 @@
             <article class="col-4 col-12-mobile special">
                 <a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
                 <header>
-                    <h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName"]}}</a></h3>
+                    <h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName_display"]}}</a></h3>
                 </header>
                 <p>Category:     {{item["category"]}}</p>
 								<p>Location:     {{item["location"]}}</p>
