--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -30,7 +30,7 @@
 					<div class="col-8 col-12-mobile" id="content">
 						<article id="main">
 							<header>
-								<h2><a href="#">{{item["itemName"]}}</a></h2>
+								<h2><a href="#">{{item["itemName_display"]}}</a></h2>
 								<p>Category:     {{item["category"]}}</p>
 								<p>Location:     {{item["location"]}}</p>
 							</header>
@@ -70,7 +70,7 @@
 					<article class="col-4 col-12-mobile special">
 						<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 						<header>
-							<h3><a href="{{ url_for('single_item', item_name=item["itemName"], item_category=item["category"]) }}">{{item["itemName"]}}</a></h3>
+							<h3><a href="{{ url_for('single_item', item_name=item["itemName"], item_category=item["category"]) }}">{{item["itemName_display"]}}</a></h3>
 						</header>
 						<p>Category:     {{item["category"]}}</p>
 						<p>Location:     {{item["location"]}}</p>
