--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 						<article>
 							<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName"]}}</a></h3>
+								<h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName_display"]}}</a></h3>
 							</header>
 						</article>
 						{% endfor %}
