--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
 		<title>All Items</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="static/css/main.css" />
+		<link rel="stylesheet" href="../static/styles/main.css" />
 		<noscript><link rel="stylesheet" href="../static/css/noscript.css" /></noscript>
 	</head>
 	<body class="no-sidebar is-preload">
