--- a/templates/Single_Item.html
+++ b/templates/Single_Item.html
@@ -41,6 +41,9 @@
 						<hr class="first" />
 						<section>
 							<h3>Tags</h3> <p>{{item["tags"]|join(", ")}}</p>
+							{% for tag in item["tags"] %}
+							<p><a href="{{ url_for('search_items', search_word=tag) }}">{{tag}},</a></p>
+							{% endfor %}
 							<p>Puchase Date: {{item["purchase_date"]}}</p>
 						</section>
 						<hr />
