--- a/templates/AddItem.html
+++ b/templates/AddItem.html
@@ -36,7 +36,7 @@
 
 			<!-- Main -->
 
-			<form>
+			<form action="/upload" method="post">
 
 				<label> <input type="text" name="item_name" placeholder="Item Name"/> </label>
 				<label> <input type="file" id="img" name="img" accept="image/*"> </label>
