--- a/templates/AddItem.html
+++ b/templates/AddItem.html
@@ -36,17 +36,21 @@
 
 			<!-- Main -->
 
-			<form action="/upload" method="post">
+			<form enctype="multipart/form-data">
 
 				<label> <input type="text" name="item_name" placeholder="Item Name"/> </label>
 				<label> <input type="file" id="img" name="img" accept="image/*"> </label>
-				<label> <input type="text" name="Select Category" placeholder="Category"> </label>
-				  <label> <input type="text" name="location" placeholder="Item Location"> </label>
-					<label> <input type="date" name="purchase_date" value="Purchase Date" min="1990-01-01" max="2022-04-22"> </label>
-					<label> <input type="text" name="tags" placeholder="#Tags (comma separated)"/> </label>
-					<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
-
-			  </form>
+				<select name = "Select Category">
+								<option value = "" disable selected>Select Category</option>
+								{% for cat in categories %}
+								<option value = "{{cat["categoryName"]}}">{{cat["categoryName"]}}</option>
+								{% endfor %}
+					</select>
+					<label> <input type="text" name="location" placeholder="Item Location"> </label>
+								<label> <input type="date" name="purchase_date" value="Purchase Date" min="1990-01-01" max="2022-04-22"> </label>
+								<label> <input type="text" name="tags" placeholder="#Tags (comma separated)"/> </label>
+								<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
+				</form>
 
 		<!-- Scripts -->
 			<script src="static/js/jquery.min.js"></script>
