--- a/templates/search.html
+++ b/templates/search.html
@@ -34,11 +34,16 @@
 		<!-- Carousel -->
 				<div class="row m1">
 					{% for item in items %}
-						<article class="col-4 col-12-mobile special">
-								<a href="Single_Item.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<header>
-										<h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName_display"]}}</a></h3>
-								</header>
+					<article class="col-4 col-12-mobile special">
+						<a href="{{ url_for('single_item', item_name=item["itemName"]) }}" class="image featured">
+							{% if 'imageName' in item.keys() %}
+							<img src="{{ images(item["imageName"]) }}" alt="{{item["itemName_display"]}} Image" />
+							{% endif %}
+						</a>
+						<header>
+							<h3><a href="{{ url_for('single_item', item_name=item["itemName"]) }}">{{item["itemName_display"]}}</a>
+							</h3>
+						</header>
 								<p>Category:     {{item["category"]}}</p>
 								<p>Location:     {{item["location"]}}</p>
 						</article>
