--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 						<article>
 							{% if 'imageName' in item.keys() %}
 							<a href="{{ url_for('single_item', item_name=item["itemName"]) }}" class="image featured">
-								<img src="{{ images(item["imageName"]) }}" alt="{{item["itemName_display"]}} Image" />
+								<img src="{{ images(item["imageName"]) }}" alt="{{item["itemName_display"]}}" />
 							</a>
 							{% endif %}
 							<header>
