--- a/templates/AddCategory.html
+++ b/templates/AddCategory.html
@@ -45,7 +45,7 @@
 				   <option value = "Dining Room" selected>Dining Room</option>
 				   <option value = "Study Room" selected>Study Room</option>
 				</select>
-				<label><input type="text" name="location" placeholder="Add Location"/> </label>
+				<label><input type="text" name="location" placeholder="Description"/> </label>
 
 				<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
 
