--- a/templates/AddCategory.html
+++ b/templates/AddCategory.html
@@ -40,7 +40,7 @@
 				  <h1>Add Category</h1>
 				</div>
 
-				<label><input type="text" name="AddArea" placeholder="Enter Area"/> </label>
+				<label><input type="text" name="AddArea" placeholder="Category"/> </label>
 				<label><input type="text" name="location" placeholder="Description"/> </label>
 
 				<button class="red" type="submit" formmethod="post"><i class="icon ion-md-lock"></i>Add</button>
